Vista home y CSS

--- a/templates/graphics.html
+++ b/templates/graphics.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
     <title>Gráficas</title>
   </head>
   <body>
+    <a href="{% url 'mostrarProductos' %}">Volver al Catálogo</a>
     <div>
       <canvas id="myChart" width="700" height="500"> </canvas>
     </div>
