--- a/templates/home.html
+++ b/templates/home.html
@@ -5,48 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
-    <title>Catálogo de productos - Django</title>
+    <title>Catálogo</title>
   </head>
   <body>
     <div class="navbar">
       <div class="logo">CRISTOPHER PAIZ</div>
       <div class="links">
-        <a href="{% url 'home' %}" class="link">Inicio</a>
-        <a href="{% url 'mostrarProductos' %}" class="link">CRUD Productos</a>
+        <a href="{% url 'mostrarProductos' %}" class="link">Inicio</a>
+        <a href="{% url 'home' %}" class="link">CRUD Productos</a>
         <a href="{% url 'chart_producto' %}" class="link">Gráfica</a>
       </div>
     </div>
     <div class="titulo">
-      <h1>Catálogo de productos</h1>
+      <h1>Catálogo con PostgreSQL y Django</h1>
     </div>
-    <div class="productos">
+    <div class="dboton">
+      <a href="{% url 'nuevoProducto' %}" class="nuevo">Nuevo Producto</a>
+    </div>
+    <table class="tabla">
+      <tr>
+        <th class="thpeq">ID</th>
+        <th class="thmed2">Nombre</th>
+        <th class="thmed">Precio</th>
+        <th class="thmed">Cantidad</th>
+        <th class="thmed">Categoría</th>
+        <th class="thgra">Descripción</th>
+        <th class="thpeq">Editar</th>
+        <th class="thpeq">Eliminar</th>
+      </tr>
       {% for resultado in datos %}
-
-      <div class="producto">
-        <div class="imagen">
-          <img
-            src="https://source.unsplash.com/280x280/?{{resultado.nombre}}"
-            alt=""
-            loading="lazy"
-          />
-        </div>
-        <div class="nombre">
-          <h2>{{resultado.nombre}}</h2>
-        </div>
-        <div class="primeraDes">
-          <div class="dis">
-            <p>Disponibilidad: {{resultado.cantidad}}</p>
-          </div>
-          <div class="precio">
-            <p>Precio: Q{{resultado.precio}}</p>
-          </div>
-        </div>
-        <div class="segundaDes">
-          <h2>Categoría: {{resultado.categoria}}</h2>
-          <p>{{resultado.descripcion}}</p>
-        </div>
-      </div>
+      <tr>
+        <td>{{resultado.id}}</td>
+        <td>{{resultado.nombre}}</td>
+        <td class="tddescription">Q. {{resultado.precio}}.00</td>
+        <td>{{resultado.cantidad}} unidades</td>
+        <td>{{resultado.categoria}}</td>
+        <td class="tddescription">{{resultado.descripcion}}</td>
+        <td class="tdlink"><a href="modify/{{resultado.id}}">Editar</a></td>
+        <td class="tdlinkr">
+          <a
+            href="Delete/{{resultado.id}}"
+            onclick="return confirm('¿Está seguro de borrar este registro?'); document.URL='/'"
+            >Eliminar</a
+          >
+        </td>
+      </tr>
       {% endfor %}
-    </div>
+    </table>
   </body>
 </html>
