--- a/templates/new.html
+++ b/templates/new.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" type="text/css" href="../static/css/style.css" /> -->
-    <link rel="stylesheet" href="{% static 'css/style.css'%}" />
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+    <!-- <link rel="stylesheet" href="{% static 'css/style.css'%}" /> -->
     <title>Nuevo Producto</title>
   </head>
   <body>
